Use CMS GC and 4 GB RAM